--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,12 @@
 [submodule "packages/sdk-http-wrapper"]
 	path = packages/sdk-http-wrapper
 	url = https://github.com/AnEntrypoint/sdk-http-wrapper.git
+[submodule "packages/tasker-adaptor"]
+	path = packages/tasker-adaptor
+	url = https://github.com/AnEntrypoint/tasker-adaptor.git
 [submodule "packages/tasker-adaptor-supabase"]
 	path = packages/tasker-adaptor-supabase
 	url = https://github.com/AnEntrypoint/tasker-adaptor-supabase.git
+[submodule "packages/tasker-adaptor-sqlite"]
+	path = packages/tasker-adaptor-sqlite
+	url = https://github.com/AnEntrypoint/tasker-adaptor-sqlite.git
