Add admin-gui as linked submodule in packages
- Complete admin GUI for task management, observability, and debugging
- REST API server for ecosystem access
- React dashboard with observability, editing, and flow building
- Accessible at packages/admin-gui for integrated development

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 	path = packages/tasker-wrapped-services
 	url = https://github.com/AnEntrypoint/tasker-wrapped-services.git
 	branch = main
+[submodule "packages/admin-gui"]
+	path = packages/admin-gui
+	url = https://github.com/AnEntrypoint/admin-gui.git
